Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T6356530/SerializableAbstractClassTest.out
SerializableAbstractClassTest.java:8:10: compiler.warn.missing.SVUID: SerializableAbstractClassTest
- compiler.err.warnings.and.werror
1 error
1 warning
